# project-management-system

./: .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: urls.py  views.py
core/static/core/css/: bootstrap.css  coreui-standalone.css  coreui.css  estilo.css
core/static/core/js/: button.js
core/templates/core/: base.html  dashboard.html  index.html
locale/ru/LC_MESSAGES/: django.mo  django.po
manager/: asgi.py  settings.py  urls.py
manager/static/: placeholder.txt
projects/: admin.py  forms.py  models.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20180402_2041.py  0003_auto_20180403_2232.py
projects/templates/projects/: new_project.html  new_task.html  projects.html
register/: admin.py  forms.py  models.py  urls.py  views.py
register/migrations/: 0001_initial.py  0002_auto_20180402_2041.py  0003_delete_friends.py  0006_auto_20180403_2058.py  0007_auto_20180403_2102.py  0008_auto_20180403_2104.py  0009_auto_20180403_2209.py  0010_auto_20180403_2210.py  0011_auto_20180403_2232.py  0012_auto_20220427_1921.py
register/templates/register/: friends.html  invites.html  login.html  new_company.html  profile.html  reg_form.html  user.html  users.html
