[tool.poetry]
name = "project-management-system"
version = "0.1.0"
description = ""
authors = ["AVT-X"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.6.23"
botocore = "1.9.23"
dj-database-url = "0.5.0"
Django = "3.2.10"
django-appconf = "1.0.2"
django-multiselectfield = "^0.1.12"
django-staticfiles = "1.2.1"
django-storages = "1.6.6"
docutils = "0.14"
jmespath = "0.9.3"
python-dateutil = "2.6.1"
pytz = "^2022.1"
s3transfer = "0.1.13"
six = "^1.16.0"
static3 = "0.7.0"
Pillow = "^9.1.0"
hypercorn = {extras = ["h3"], version = "^0.13.2"}

[tool.poetry.dev-dependencies]
django-livereload-server = "^0.4"
pre-commit = "^2.18.1"
yapf = "^0.32.0"
dotenv-linter = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [

]
